2008-01-15  Bastien Nocera  <hadess@hadess.net>

	* src/plparse/Makefile.am: Use 64-bit versions of the
	functions when possible, fixes DVD ISO not being recognised
	(Closes: #509020)

2008-01-13  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-xine.c: (xine_event):
	Check the title passed from xine-lib for UTF-8 correctness
	(Closes: #497175)

2008-01-09  Bastien Nocera  <hadess@hadess.net>

	* configure.in: Fix typo

2008-01-08  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/Makefile.am:
	* configure.in: Remove gnome-desktop requirement, and
	allow compilation of the GTK+-only version of the
	browser plugin

============ Version 2.20.3

2008-01-07  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 2.20.3

2007-12-12  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totem-plugin-viewer.c: (entry_parsed):
	* src/totem-playlist.c: (totem_embedded_parse_duration),
	(totem_playlist_entry_parsed): Add backported hack from
	trunk, patch by Hans de Goede <j.w.r.degoede@hhs.nl>,
	will skip 0-length playlists in both the main player and
	the browser viewer

2007-10-25  Bastien Nocera  <hadess@hadess.net>

	* data/mime-type-list.txt: add audio/x-xm (XM tracker files)
	as supported (Closes: #489580)

2007-10-19  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totem-plugin-viewer.c:
	(totem_embedded_toggle_fullscreen):
	Put the fullscreen window on the screen where the video
	widget is, when using Xinerama (Closes: #487932)

2007-10-19  Bastien Nocera  <hadess@hadess.net>

	* data/mime-type-list.txt: Patch from Stephane Loeuillet
	<leroutier@gmail.com> to fix some warnings in the .desktop
	file (Closes: #481700)

============ Version 2.20.1

2007-10-17  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 2.20.1

2007-10-17  Bastien Nocera  <hadess@hadess.net>

	* configure.in: Require GTK+ 2.12.1 so we get the patch
	for #478371

2007-10-15  Bastien Nocera  <hadess@hadess.net>
